# Paddle

./: .gitignore  CMakeLists.txt  demo.py  t.sh
cmake/: flags.cmake  generic.cmake  operators.cmake
demos/: install.sh  stubgen.sh  stubgen_test.py
paddle/fluid/framework/: CMakeLists.txt
paddle/fluid/framework/details/: CMakeLists.txt
paddle/fluid/framework/fleet/: CMakeLists.txt
paddle/fluid/framework/io/: CMakeLists.txt
paddle/fluid/framework/ir/: CMakeLists.txt
paddle/fluid/framework/new_executor/: CMakeLists.txt
paddle/fluid/framework/new_executor/garbage_collector/: CMakeLists.txt
paddle/fluid/framework/new_executor/instruction/: CMakeLists.txt
paddle/fluid/framework/new_executor/interpreter/: CMakeLists.txt
paddle/fluid/framework/new_executor/workqueue/: CMakeLists.txt
paddle/fluid/imperative/: CMakeLists.txt
paddle/fluid/inference/api/: CMakeLists.txt  onnxruntime_predictor.cc  onnxruntime_predictor.h
paddle/fluid/inference/capi/: CMakeLists.txt
paddle/fluid/inference/capi_exp/: CMakeLists.txt
paddle/fluid/operators/: CMakeLists.txt
paddle/fluid/operators/controlflow/: CMakeLists.txt
paddle/fluid/operators/detection/: CMakeLists.txt
paddle/fluid/operators/eigen/: CMakeLists.txt
paddle/fluid/operators/fused/: CMakeLists.txt
paddle/fluid/operators/math/: CMakeLists.txt
paddle/fluid/operators/optimizers/: CMakeLists.txt
paddle/fluid/platform/: CMakeLists.txt
paddle/fluid/pybind/: CMakeLists.txt
paddle/phi/kernels/: uniform_random_kernel.cc
python/paddle/base/: core.py
python/paddle/fluid/: core.py
(+7 files in other folders)
